--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "python-wrangler",
   "version": "0.1.1",
+  "homepage": "http://littlecolumns.com/tools/python-wrangler/",
   "author": "Jonathan Soma <jonathan.soma@gmail.com>",
   "description": "Clean up all those Pythons crawling around your computer",
   "license": "mit",
   "main": "./dist/electron/main.js",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/littlecolumns/python-wrangler.git"
+  },
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
